# go-imagekit

./: .gitignore  README.md  go.mod  imagekit.go  imagekit_test.go  main.go
lib/: hello.go  hello.h
pngquant/: CMakeLists.txt  build.sh  pngquant.go  quant.c  quant.go  quant.h
pngquant/libadvpng/: advpng.c  advpng.h  config.h  portable.h
